app/assets/stylesheets/levels.css.scss
/* ... */
.level_selection_page {
  width: 100vw;
  .level {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0;
    padding: 0;
    margin-top: 20px;
    margin-bottom: 20px;
  }
  .level:last-child {
    margin-bottom: 0px;
  }
  .level_btn {
    cursor: default;
    width: 15vh;
    height: 15vh;
    line-height: 15vh;
    text-align: center;
    font-size: 10vh;
    border-radius: 50%;
    background-color: white;
    color: #eee;
    box-shadow: 0px 0px 30px #e8f8ff;
    font-family: Helvetica, sans-serif;
    margin: 0 30px;
    position: relative;
    .level_id {
      z-index: 10;
      top: 0;
    }
    .glyphicon-flag, .level_id {
      position: absolute;
      left: 0;
      font-size: 10vh;
      width: 100%;
      text-align: center;
    }
    .glyphicon-flag {
      top: 2vh;
      z-index: 5;
      opacity: 0.3;
    }
  }
  .completed_level .level_btn {
    color: var(--main-background-color);
    cursor: pointer;
  }
  .completed_level:not(.all_complete) .level_start_word, .completed_level:not(.all_complete) .level_target_word {
    display: none;
  }
  .completed_level ~ .level:not(.completed_level) .level_btn {
    cursor: pointer;
  }

  .level:not(.completed_level) ~ .level:not(.completed_level) {
    .level_start_word, .level_target_word {
      display: none;
    }
    .level_btn {
      opacity: 0.3;
      cursor: default;
    }
  }
  .level_start_word, .level_target_word {
    text-transform: uppercase;
    text-align: center;
    font-size: 2vh;
    color: white;
    letter-spacing: 2px;
  }
  .chapter {
    text-transform: uppercase;
    color: #eee;
    font-size: 7vh;
    font-family:  Helvetica, sans-serif;
    text-align: center;
    margin: 0 auto;
    position: relative;
    // display: -webkit-flex; /* Safari */

    a {
      color: white;
      text-decoration: none;
      font-size: 5vh;
      height: 7vh;
    }
    .prev_chap, .next_chap {
      position: absolute;
      .glyphicon {
        //top: 1.6vh;
      }
    }
    .prev_chap {
      top: -0.2vh;
      left: 5px;
    }
    .next_chap {
      top: -0.2vh;
      right: 5px;
    }

  }
}

#options_overlay, #skip_overlay, #hints_overlay {
  color: #aaa;
  font-size: 5vh;
  @media (min-width: 768px) {
    .modal-dialog{
      position: relative;
      display: table; /* This is important */
      overflow-y: auto;
      overflow-x: auto;
      width: auto;
      min-width: 10px;
    }
  }
  .modal-content, .modal-body {
    background-color: transparent;
    -webkit-box-shadow: 0 0px 0px rgba(0,0,0,0);
    box-shadow: 0 0px 0px rgba(0,0,0,0);
    border-width: 0px;
    padding: 0;
  }
  .options_container, #hints_container {
    position: relative;
    max-width: 350px;
    padding: 30px;
    background: white;
    color: var(--main-background-color);
    margin: 0 auto;
    font-size: 28px;
    .close_options {
      position: absolute;
      top: 5px;
      right: 5px;
      font-size: 20px;
      color: #ccc;
    }
    .to_menu_btn {
      text-decoration: none;
      color: #aaa;
    }
    .skip_level_btn, .select_level_btn {
      text-decoration: none;
      color: #bbb;
    }
    .glyphicon-remove {
      -webkit-text-stroke: 4px white;
    }
    .music_btn {
      left: 80px;
      top: 3px;
    }
    .skip_btn {
      text-align: center;
      a:link {
        color: #ccc;
        text-decoration: none;
      }
    }
    #show_hints_btn {
      color: #ccc;
    }
  }
}

#hints_container {
  color: #ccc !important;
  font-size: 20px;
  max-width: 350px !important;
  // text-align: center;
  div {
    margin: 15px auto;
  }
}

#more_hints, #want_hints {
  color: white;
  margin-top: 30px;
  border-radius: 3px;
  font-size: 28px;
  box-shadow: 0px 0px 30px #e8f8ff;
  padding: 10px;
  text-align: center;
  text-weight: bold;
}

.glyphicon-facetime-video {
  top: 5px;
}

.credits_content, .profile_content {
  font-size: 4vh;
  display: none;
  text-align: center;
  h5 {
    font-size: 5vh !important;
  }
  .music_title {
    font-size: 4vh;
    color: white;
    text-decoration: none;
  }
  .soundcloud_links {
    display: flex;
    align-items: center;
    justify-content: center;
    a, a:link, a:hover {
      color: white;
      font-size: 3vh;
      text-decoration: none;
    }
  }
  .soundcloud_logo {
    height: 100px;
    width: 150px;
    object-fit: contain;
    margin-left: 20px;
    margin-right: 15px;
  }
}

.blink {
  animation: blinker 2s linear infinite;
}

@keyframes blinker {
  50% { opacity: 0.2; }
}

.hint {
  animation: flash 2s linear infinite;
}

@keyframes flash {
  50% {
    color: white;
    background: var(--main-background-color);
  }
}

.start_word, .target_word {
  text-transform: uppercase;
  .letter {
    display: inline-block;
    margin: 0;
    padding: 0;
    letter-spacing: 0;
    width: 5vh;
  }
}

.target_word {
  .full_match {
    color: white;
    text-shadow: 0px 0px 20px white;
  }
  .partial_match {
    color: white;
    text-shadow: 0px 0px 5px white;
  }
  .not_match {
    color: white;
    opacity: 0.9;
  }
}

.zen_loading {
  color: #aaa;
  display: none;
  font-size: 6vh;
  .small {
    font-size: 4.5vh;
  }
}

.disabled {
  pointer-events: none;
  cursor: default;
  text-decoration: none;
  opacity: 0.3;
}
.glyphicon-lock::before {
  font-size: 80%;
  opacity: 0.3;
}
.glyphicon-lock::after {
  content: "20";
  color: white;
  opacity: 1;
  position: absolute;
  bottom: 3px;
  left: 0.72vh;
  font-size: 50%;
}
/* ... */

